<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Orion</string>
    <string name="action_settings">Settings</string>
    <string name="smart_order_system">Orion Smart Order System</string>
    <string name="login">Login</string>
    <string name="order">Order</string>
    <string name="user">User</string>
    <string name="todays_section">Today\'s Section</string>
    <string name="date">Date</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="todays_status">Today\'s Status</string>
    <string name="order_summary">Order Summary</string>
    <string name="promotions">Promotions</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <array name="drawer_top_array">
        <item>@string/action_example</item>
        <item>@string/todays_status</item>
        <item>@string/order_summary</item>
        <item>@string/promotions</item>
    </array>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="version_text">Version: 2018.04.30 ©CEL</string>
    <string name="lpc">LPC</string>
    <string name="target">Target</string>
    <string name="remaining">Remaining</string>
    <string name="rem_outlet">Rem. Outlet</string>
    <string name="online">Online</string>
    <string name="track_gps">Track GPS</string>
    <string name="action_home">Home</string>
    <string name="sku">SKU</string>
    <string name="na">N/A</string>
    <string name="brands">Brands</string>
    <string name="products">Products</string>
    <string name="order_details">Order Detail</string>
    <string name="checkout">Checkout</string>
    <string name="view_memo">View Memo</string>
    <string name="visit_outlet">Visit Outlet</string>
    <string name="enable_gps">Please enable location from settings.</string>

</resources>