<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/gray_gradient_background"
	tools:context=".HomePageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/item_padding"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_lable_color"
                                android:textSize="@dimen/form_label_font_size"
                                android:text="@string/user" />

                            <TextView
                                android:id="@+id/user_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/form_value_font_size"
                                android:text="N/A" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/item_padding"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_lable_color"
                                android:textSize="@dimen/form_label_font_size"
                                android:text="@string/todays_section" />

                            <TextView
                                android:id="@+id/section_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/form_value_font_size"
                                android:text="N/A" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/item_padding"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_lable_color"
                                android:textSize="@dimen/form_label_font_size"
                                android:text="@string/date" />

                            <TextView
                                android:id="@+id/date_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/form_value_font_size"
                                android:text="N/A" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/item_padding"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_lable_color"
                                android:textSize="@dimen/form_label_font_size"
                                android:text="@string/order" />

                            <TextView
                                android:id="@+id/todays_order_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/form_value_font_size"
                                android:text="N/A" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/item_padding"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_lable_color"
                                android:textSize="@dimen/form_label_font_size"
                                android:text="@string/lpc" />

                            <TextView
                                android:id="@+id/LPC_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/form_value_font_size"
                                android:text="N/A" />
                        </LinearLayout>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/item_padding"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_lable_color"
                                android:textSize="@dimen/form_label_font_size"
                                android:text="@string/target" />

                            <TextView
                                android:id="@+id/todays_target_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/form_value_font_size"
                                android:text="N/A" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/item_padding"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_lable_color"
                                android:textSize="@dimen/form_label_font_size"
                                android:text="@string/remaining" />

                            <TextView
                                android:id="@+id/remaining_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/form_value_font_size"
                                android:text="N/A" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/item_padding"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_lable_color"
                                android:textSize="@dimen/form_label_font_size"
                                android:text="@string/rem_outlet" />

                            <TextView
                                android:id="@+id/outlet_remaining_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/form_value_font_size"
                                android:text="N/A" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/item_padding"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_lable_color"
                                android:textSize="@dimen/form_label_font_size"
                                android:text="@string/online" />

                            <TextView
                                android:id="@+id/will_upload_online_order"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/form_value_font_size"
                                android:text="N/A" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/item_padding"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_lable_color"
                                android:textSize="@dimen/form_label_font_size"
                                android:text="Territory Name" />

                            <TextView
                                android:id="@+id/outlet_territory_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/form_value_font_size"
                                android:text="N/A" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/item_padding"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_lable_color"
                                android:textSize="@dimen/form_label_font_size"
                                android:text="Depot Name" />

                            <TextView
                                android:id="@+id/txtDepoName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/form_value_font_size"
                                android:text="N/A" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/item_padding"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_lable_color"
                                android:textSize="@dimen/form_label_font_size"
                                android:text="@string/track_gps" />

                            <TextView
                                android:id="@+id/will_track_gps"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/form_value_font_size"
                                android:text="N/A" />
                        </LinearLayout>

                    </LinearLayout>



                </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/order_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/darkgreen"
            android:textColor="@color/white"
            android:text="@string/order" />
    </LinearLayout>


</RelativeLayout>